Name: rss
Version: 2006.6.28
Copyright: Jeremy Shaw 2004, Bjorn Bringert 2004-2006
Maintainer: bjorn@bringert.net
Author: Jeremy Shaw, Bjorn Bringert
Homepage: http://www.cs.chalmers.se/~bringert/darcs/haskell-rss/doc/
License: PublicDomain
build-depends: haskell98, base, network, HaXml
Synopsis: A library for generating RSS 2.0 feeds.
Description:
 This library generates [RSS 2.0 http://www.rssboard.org/rss-2-0-1-rv-6] 
 feeds.
Exposed-Modules: Text.RSS
ghc-options: -O2 -W -fwarn-incomplete-patterns
