Name: rss
Version: 3000.2.0
Cabal-version: >=1.6
Build-type: Simple
Copyright: Jeremy Shaw 2004, Bjorn Bringert 2004-2006
Maintainer: bjorn@bringert.net
Author: Jeremy Shaw, Bjorn Bringert
License: PublicDomain
Synopsis: A library for generating RSS 2.0 feeds.
Description:
 This library allows you to generate RSS 2.0 feeds.

source-repository head
  Type:     darcs
  Location: http://code.haskell.org/rss/

Library
  build-depends: base       >= 3      && < 5
               , network    >= 2.0    && < 2.4
               , HaXml      >= 1.19.2 && < 1.23
               , time       >= 1.1.2  && < 1.5
               , old-time   >= 1.0    && < 1.1
               , old-locale >= 1.0    && < 1.1
  Exposed-Modules: Text.RSS
  ghc-options: -Wall
