cabal-version: 1.12
name: rss
version: 3000.2.0.8

build-type:  Simple
copyright:   Jeremy Shaw 2004, Bjorn Bringert 2004-2006
maintainer:  hvr@gnu.org
author:      Jeremy Shaw, Bjorn Bringert
license:     PublicDomain
homepage:    https://github.com/hvr/rss
bug-reports: https://github.com/hvr/rss/issues
synopsis:    A library for generating RSS 2.0 feeds.
category:    RSS
description: This library allows you to generate [RSS 2.0](http://www.rssboard.org/rss-specification) feeds.
tested-with: GHC==8.6.4, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2, GHC==7.2.2, GHC==7.0.4

source-repository head
  type:     git
  location: https://github.com/hvr/rss.git

flag old-locale
  description: If false then depend on @time >= 1.5@.
               .
               If true then depend on @time < 1.5@ together with @old-locale@.
  default: False

library
  exposed-modules: Text.RSS

  default-language: Haskell2010
  other-extensions: CPP
  if impl(ghc >= 7.2)
    default-extensions: Trustworthy

  build-depends: base        >= 4.3    && < 4.13
               , HaXml       >= 1.24   && < 1.26
               , network-uri >= 2.6    && < 2.7

  if flag(old-locale)
    build-depends: time       >= 1.1.2 && < 1.5
                 , old-locale >= 1.0   && < 1.1
  else
    build-depends: time       >= 1.5   && < 1.9


  ghc-options: -Wall
  if impl(ghc >= 7.10)
    ghc-options: -fno-warn-trustworthy-safe
